@@ -13,13 +13,11 @@ import com.fongmi.android.tv.event.ScanEvent;
 import com.fongmi.android.tv.ui.base.BaseActivity;
 import com.fongmi.android.tv.utils.Util;
 import com.google.zxing.BarcodeFormat;
-import com.google.zxing.ResultPoint;
 import com.journeyapps.barcodescanner.BarcodeCallback;
 import com.journeyapps.barcodescanner.BarcodeResult;
 import com.journeyapps.barcodescanner.CaptureManager;
 import com.journeyapps.barcodescanner.DefaultDecoderFactory;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ScanActivity extends BaseActivity implements BarcodeCallback {
@@ -45,11 +43,7 @@ public class ScanActivity extends BaseActivity implements BarcodeCallback {
     @Override
     protected void initView(Bundle savedInstanceState) {
         mCapture = new CaptureManager(this, mBinding.scanner);
-        mBinding.scanner.getBarcodeView().setDecoderFactory(new DefaultDecoderFactory(Arrays.asList(BarcodeFormat.QR_CODE)));
-    }
-
-    @Override
-    public void possibleResultPoints(List<ResultPoint> resultPoints) {
+        mBinding.scanner.getBarcodeView().setDecoderFactory(new DefaultDecoderFactory(List.of(BarcodeFormat.QR_CODE)));
     }
 
     @Override
